@@ -143,8 +143,16 @@
 			<li><span class="label label-info">Modified</span> Upgraded ELK version from 0.5.0 to 0.6.0, see the 
 				<a href="https://projects.eclipse.org/projects/modeling.elk/releases/0.6.0">ELK documentation</a> for the list of changes in that version.
 			</li>
+			<li><span class="label label-info">Modified</span> Sirius now requires GMF Notation &amp; Runtime 1.13.0.</li>
 			<li><span class="label label-info">Modified</span> 
 				<code>org.eclipse.sirius.diagram.ui.tools.api.graphical.edit.styles.SimpleStyleConfiguration.isShowIcon(DDiagramElement, IGraphicalEditPart)</code> is now protected instead of private.
+			</li>
+		</ul>
+		<h4 id="Migrations">Migrations</h4>
+		<ul>
+			<li><span class="label label-success">Added</span> A migration participant has been added only to change the version of the model. Indeed, if the new value &#8220;Tunnel&#8221; of GMF jump link type is used, see &#8220;User-Visible Changes&#8221; in 
+				<a href="Release_Notes.html#sirius6.3.1">Sirius 6.1.3</a>, the model will be invalid for an older version of Sirius. The corresponding version, stored in attribute version of viewpoint:DAnalysis of the aird file, is 
+				<em>14.3.1.202003101500</em>.
 			</li>
 		</ul>
 		<h2 id="sirius6.3.0">Changes in Sirius 6.3.0</h2>
@@ -280,7 +288,7 @@
 				<code>org.eclipse.sirius.diagram.elk.IELKLayoutExtension</code> interface for more details.
 			</li>
 		</ul>
-		<h4 id="Migrations">Migrations</h4>
+		<h4 id="Migrations2">Migrations</h4>
 		<ul>
 			<li><span class="label label-success">Added</span> A migration participant has been added to move the name and documentation from the representations to their descriptors (see 
 				<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=548631">bugzilla #548631</a> for more details). The corresponding version, stored in attribute version of viewpoint:DAnalysis of the aird file, is 
@@ -1147,7 +1155,7 @@
 				<code>oes.common</code> plugin.
 			</li>
 		</ul>
-		<h4 id="Migrations2">Migrations</h4>
+		<h4 id="Migrations3">Migrations</h4>
 		<ul>
 			<li><span class="label label-success">Added</span> A migration participant has been added to convert the serialized xmi:id to the technical id (uid attribut) for Sirius model elements of the .aird files (see 
 				<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=525261">bugzilla #525261</a> for more details). The corresponding version, stored in attribute version of viewpoint:DAnalysis of the aird file, is 
@@ -1415,7 +1423,7 @@
 				<code>org.eclipse.swtbot.swt.finder.widgets.AbstractSWTBot.dragAndDrop(AbstractSWTBot&lt;? extends Widget&gt;)</code> method instead. 
 			</li>
 		</ul>
-		<h4 id="Migrations3">Migrations</h4>
+		<h4 id="Migrations4">Migrations</h4>
 		<ul>
 			<li><span class="label label-success">Added</span> A migration participant has been added to fix diagram with note attachment corrupted (see 
 				<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=533177">bugzilla #533177</a> for more details). The corresponding version, stored in attribute version of viewpoint:DAnalysis of the aird file, is 
@@ -1588,7 +1596,7 @@
 			</li>
 		</ul>
 		<h3 id="DeveloperVisibleChanges9">Developer-Visible Changes</h3>
-		<h4 id="Migrations4">Migrations</h4>
+		<h4 id="Migrations5">Migrations</h4>
 		<ul>
 			<li><span class="label label-success">Added</span> A migration has been added to fix diagram with edge labels corrupted (see 
 				<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=518870">bugzilla #518870</a> for more details). The corresponding version, stored in attribute version of viewpoint:DAnalysis of the aird file, is 
